--- a/Carbon.Core/.msbuild/props/Configurations.props
+++ b/Carbon.Core/.msbuild/props/Configurations.props
@@ -42,10 +42,10 @@
 		<!-- System libs -->
 		<Reference Include="System.Core" />
 		<Reference Include="System.Data" />
-		<Reference Include="System.Drawing.Design" />
 		<Reference Include="System.Drawing" />
-		<Reference Include="System.Globalization" />
+		<Reference Include="System.Globalization" Private="true" />
 		<Reference Include="System.IO.Compression.FileSystem" />
+		<Reference Include="System.Configuration.Install" Private="true" />
 		<Reference Include="System.Xml" />
 		<Reference Include="System" />
 
