Carbon can now be restarted with c.restart

--- a/Carbon.Core/.msbuild/props/Common.props
+++ b/Carbon.Core/.msbuild/props/Common.props
@@ -6,7 +6,9 @@
 		<Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<Deterministic>true</Deterministic>
+		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<FileAlignment>512</FileAlignment>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<LangVersion>latest</LangVersion>
 		<Platforms>x64</Platforms>
 		<PlatformTarget></PlatformTarget>
