--- a/Carbon.Core/.msbuild/targets/Clean.targets
+++ b/Carbon.Core/.msbuild/targets/Clean.targets
@@ -13,6 +13,7 @@
 	<!-- ===================== -->
 	<Target Name="CarbonPostBuildEvent1" AfterTargets="PostBuildEvent" Condition="'$(TargetName).dll' != '$(Product).dll'">
 		<Message Text="[$(AssemblyName)] &gt;&gt; Rename the build artifact from '$(OutputPath)$(TargetName).dll' to '$(OutputPath)$(Product).dll'" Importance="high" />
+		<Copy SourceFiles="$(OutputPath)$(TargetName).pdb" DestinationFiles="$(OutputPath)$(Product).pdb" Condition="$(Configuration.Contains('Debug'))" />
 		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)$(Product).dll" />
 	</Target>
 
