--- a/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
+++ b/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
@@ -18,6 +18,7 @@
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
+		<Copy SourceFiles="$(OutputPath)$(Product).pdb" DestinationFolder="$(c_managed)" Condition="$(Configuration.Contains('Debug'))" />
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_managed)" />
 	</Target>
 </Project>
