--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -42,6 +42,8 @@
 
 	<ItemGroup>
 		<!-- System libs -->
+		<Reference Include="System.Configuration.Install" Private="true" />
+		<Reference Include="System.Globalization" Private="true" />
 
 		<!-- Facepunch game files -->
 		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\*.dll" Private="false" />
