--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -155,7 +155,5 @@ jobs:
 
           [stable]: https://github.com/Carbon-Modding/Carbon.Core/releases/latest
         files: |
-          Release/Carbon.dll
-          Release/Carbon.Patch.zip
-          Release/Carbon-Unix.dll
-          Release/Carbon.Patch-Unix.zip
+          Release/Carbon.Debug.zip
+          Release/Carbon-DebugUnix.dll
