--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -149,13 +149,11 @@ jobs:
           This build is targeted at the general public.
 
           ### How to install
-          1. Download the `Carbon.Patch.zip` archive from the attachments below.
+          1. Download the `Carbon.Release[Unix].zip` archive from the attachments below.
           2. Unzip the archive to the root of your Rust Dedicated Server.
           3. Restart the server and enjoy.
           
           ${{ needs.build-linux.outputs.build_info }}
         files: |
-          Release/Carbon.dll
-          Release/Carbon.Patch.zip
-          Release/Carbon-Unix.dll
-          Release/Carbon.Patch-Unix.zip
+          Release/Carbon.Release.zip
+          Release/Carbon-ReleaseUnix.dll
