--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -145,7 +145,7 @@ jobs:
         tag_name: production_build
         name: 'Carbon Build (production)'
         body: |
-          This is a build of Carbon based on the `production` branch.
+          This is a release build of Carbon based on the `production` branch.
           This build is targeted at the general public.
 
           ### How to install
