--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -72,7 +72,7 @@ jobs:
     - name: 🐧 Built Carbon on Linux
       shell: bash
       run: |
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build_debug.sh
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -104,7 +104,7 @@ jobs:
     - name: 🪟 Built Carbon on Windows
       shell: cmd
       run: |
-        %GITHUB_WORKSPACE%\Tools\Build\win\build_debug.bat
+        %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -118,11 +118,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: ⬇️ Download artifacts
+    - name: ⬇️ Download artifacts from the linux build
       uses: actions/download-artifact@v3
       with:
         name: ${{ needs.build-linux.outputs.artifact }}
-        path: Release/
+        path: Release/linux/
+
+    - name: ⬇️ Download artifacts from the windows build
+      uses: actions/download-artifact@v3
+      with:
+        name: ${{ needs.build-windows.outputs.artifact }}
+        path: Release/windows/
         
     - name: 🗑️ Delete existing release tag
       uses: dev-drprasad/delete-tag-and-release@v0.2.0
@@ -153,5 +159,5 @@ jobs:
 
           [stable]: https://github.com/Carbon-Modding/Carbon.Core/releases/latest
         files: |
-          Release/Carbon.Debug.zip
-          Release/Carbon-DebugUnix.dll
+          Release/windows/Carbon.Debug.zip
+          Release/linux/Carbon-DebugUnix.tar.gz
