--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -16,7 +16,8 @@
 		</When>
 		<Otherwise>
 			<PropertyGroup>
-				<DebugType>pdbonly</DebugType>
+				<!-- Changed due to FP_73186 changeset -->
+				<DebugType>embedded</DebugType>
 				<DebugSymbols>true</DebugSymbols>
 				<DefineConstants>DEBUG;UNITY_ASSERTIONS;$(DefineConstants)</DefineConstants>
 				<Optimize>false</Optimize>
