Still dealing with FP_73186 fallout
When warming up the assemblies from disk for the compiler, Carbon.Loader was getting reloaded due to a different asm name thus replacing the in-mem runtime type. We now cope with this by adding an AssemblyResolver edge case: Find out our Facepunch's baptism name and make sure the asm is loaded from AppDomain and not from disk. This is OK because Carbon.Loader should never be hot reloaded from disk.

--- a/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
+++ b/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
@@ -8,6 +8,9 @@
 	<Import Project="..\.msbuild\Common.props" />
 
 	<ItemGroup>
+		<!-- Assembly editor -->
+		<PackageReference Include="Mono.Cecil" Version="0.11.4" />
+
 		<!-- Extra packages -->
 		<PackageReference Include="Costura.Fody" Version="5.7.0" PrivateAssets="all" />
 
