Too many stuff to list here..
New Assembly Resolver for native and Cecil
New "c.assembly" debug command
Some files moved around, others deleted due to refactoring
Remove msbuild random assembly name generation, switch to runtime cecil renaming

--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -19,7 +19,7 @@
 	<PropertyGroup>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(VersionPrefix)</FileVersion>
-		<Version>1.$([System.DateTime]::UtcNow.ToString('yy.ddMM')).10</Version>
+		<Version>1.$([System.DateTime]::UtcNow.ToString('yy.MMdd')).$([System.DateTime]::UtcNow.ToString('HHss'))</Version>
 		<VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
 		<VersionSuffix>$(Configuration)</VersionSuffix>
 
