--- a/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
+++ b/Carbon.Core/Carbon.Loader/Carbon.Loader.csproj
@@ -9,7 +9,7 @@
 
 	<ItemGroup>
 		<!-- Assembly editor -->
-		<PackageReference Include="Mono.Cecil" Version="0.11.4" />
+		<PackageReference Include="Mono.Cecil" Version="0.11.4" Aliases="MonoCecilStandalone" />
 
 		<!-- Compression -->
 		<PackageReference Include="SharpCompress" Version="0.32.2" PrivateAssets="all" />
@@ -22,8 +22,6 @@
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
-		<!-- Changed due to FP_73186 changeset -->
-		<!-- <Copy SourceFiles="$(OutputPath)$(Product).pdb" DestinationFolder="$(c_harmony)" Condition="$(Configuration.Contains('Debug'))" /> -->
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_harmony)" />
 		<Copy SourceFiles="@(FilesToCopy)" DestinationFolder="$(c_lib)\%(RecursiveDir)" />
 	</Target>
