--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -17,6 +17,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
+		<AssemblyName>$(Product)</AssemblyName>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(VersionPrefix)</FileVersion>
 		<Version>1.$([System.DateTime]::UtcNow.ToString('yy.MMdd')).$([System.DateTime]::UtcNow.ToString('HHss'))</Version>
