--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -15,6 +15,9 @@
 		<!-- Required by Carbon's Logger -->
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 
+		<!-- Compression -->
+		<PackageReference Include="SharpCompress" Version="0.32.2" PrivateAssets="all" />
+
 		<!-- Required by Carbon's Compiler -->
 		<PackageReference Include="protobuf-net.Core" Version="3.1.17" />
 		<PackageReference Include="protobuf-net" Version="3.1.17" />
