--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ FodyWeavers.xsd
 **/Carbon/Resources/1Harmony.dll
 
 # Oxide autogen hooks
-**/Carbon.Hooks/src/Hooks/Oxide/*.cs
-**/Carbon.Hooks/src/Hooks/Oxide/__example.cs.txt
+**/Carbon.Hooks.Extended/src
 
 # Project release folder
 [Rr]elease/
