--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -20,7 +20,7 @@
 		<AssemblyName>$(Product)</AssemblyName>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(VersionPrefix)</FileVersion>
-		<Version>1.$([System.DateTime]::UtcNow.ToString('yy.MMdd')).$([System.DateTime]::UtcNow.ToString('HHss'))</Version>
+		<Version>1.$([System.DateTime]::UtcNow.ToString('yy.MMdd')).$([System.DateTime]::UtcNow.ToString('HHmm'))</Version>
 		<VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
 		<VersionSuffix>$(Configuration)</VersionSuffix>
 
