--- a/Carbon.Core/Carbon.Hooks.Base/Carbon.Hooks.Base.csproj
+++ b/Carbon.Core/Carbon.Hooks.Base/Carbon.Hooks.Base.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Build">
 	<PropertyGroup>
-		<Product>Carbon.Hooks</Product>
+		<Product>Carbon.Hooks.Base</Product>
 		<OutputType>Library</OutputType>
 		<ProjectGuid>{D59DCF01-9F04-4FD9-8BE8-DA6E2EFC1211}</ProjectGuid>
 	</PropertyGroup>
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
-		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_managed)" />
+		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_hooks)" />
 	</Target>
 
 	<Target Name="AfterResolveReferences">
