Update github workflows

--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -142,6 +142,7 @@ jobs:
     - name: 🏷️ Update release tag
       uses: softprops/action-gh-release@v1
       with:
+        draft: false
         prerelease: true
         tag_name: develop_build
         name: 'Carbon Build (develop)'
