--- a/Carbon.Core/.msbuild/Release.targets
+++ b/Carbon.Core/.msbuild/Release.targets
@@ -9,6 +9,7 @@
 			<c_managed>$(CarbonBaseDir)\carbon\managed</c_managed>
 			<c_hooks>$(CarbonBaseDir)\carbon\managed\hooks</c_hooks>
 			<c_tools>$(CarbonBaseDir)\carbon\tools</c_tools>
+			<c_modules>$(CarbonBaseDir)\carbon\managed\modules</c_modules>
 		</PropertyGroup>
 
 		<Message Text="[$(AssemblyName)] &gt;&gt; Create the release folders at '$(CarbonBaseDir)'" Importance="high" />
