Injector cleanup Added command line switches (-carbon.rootdir/scriptdir/harmonydir/configdir/datadir/moduledir) Parse RustCore.FindPlayerById to BasePlayer.FindById

--- a/Carbon.Core/Carbon.Rust.Covalence/Carbon.Oxide.Covalence.csproj
+++ b/Carbon.Core/Carbon.Rust.Covalence/Carbon.Oxide.Covalence.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Build">
 	<PropertyGroup>
-		<Product>Carbon.Rust.Covalence</Product>
+		<Product>Carbon.Oxide.Covalence</Product>
 		<OutputType>Library</OutputType>
 		<TargetFramework>net481</TargetFramework>
 	</PropertyGroup>
