Working Preloader, Bootstrap and moar

--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -38,8 +38,8 @@
 
 	<Import Project="Configurations.props" />
 	<Import Project="Metadata.props" />
-
 	<Import Project="Clean.targets" />
 	<Import Project="Metadata.targets" />
 	<Import Project="Release.targets" />
+	<Import Project="References.props" />
 </Project>
