--- a/Tools/Helpers/doorstop_config.ini
+++ b/Tools/Helpers/doorstop_config.ini
@@ -1,3 +1,3 @@
 [General]
 enabled = true
-target_assembly = carbon/managed/Carbon.Bootstrap.dll
+target_assembly = carbon/managed/Carbon.Preloader.dll
