--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -10,5 +10,8 @@
 		<Reference Include="System.Data" />
 		<Reference Include="System.Net.Http" />
 		<Reference Include="System.Xml" />
+
+		<!-- Carbon API -->
+		<ProjectReference Include="$(SolutionDir)\Carbon.API\Carbon.API.csproj" Private="false" Condition="!$(Product.Contains('Carbon.API'))" />
 	</ItemGroup>
 </Project>
