--- a/Carbon.Core/Carbon.Hooks.Extended/Carbon.Hooks.Extended.csproj
+++ b/Carbon.Core/Carbon.Hooks.Extended/Carbon.Hooks.Extended.csproj
@@ -18,6 +18,7 @@
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_hooks)" />
+		<Copy SourceFiles="$(PkgLib_Harmony)\lib\net48\0Harmony.dll" DestinationFolder="$(c_lib)" />
 	</Target>
 
 	<Target Name="AfterResolveReferences">
