Not much to say about this one

--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -30,10 +30,10 @@
 
 	<PropertyGroup>
 		<Authors>Carbon Community</Authors>
-		<Copyright>Copyright © $([System.DateTime]::Now.Year) $(Authors)</Copyright>
+		<Copyright>Copyright © 2022-$([System.DateTime]::Now.Year) $(Authors)</Copyright>
 		<PackageProjectUrl>https://discord.gg/eXPcNKK4yd</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/Carbon-Modding/Carbon.Core</RepositoryUrl>
-		<Description>A very lightweight version of Oxide, all working within Harmony's environment.</Description>
+		<Description>A very lightweight and modular Harmony-based modding framework</Description>
 	</PropertyGroup>
 
 	<Import Project="Configurations.props" />
